yml_files_e2/k8s-new-services-deployment.yaml
###################################
# utility-management
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utility
  labels:
    app: utility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utility

  template:
    metadata:
      labels:
        app: utility
    spec:
      containers:
        - name: utility
          image: us-central1-docker.pkg.dev/gcloudprojectg14e2/entrega2-g14/utility:2.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3004
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-utility
  annotations:
    cloud.google.com/backend-config: '{"default": "utility-config"}'
spec:
  type: NodePort
  selector:
    app: utility
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
      nodePort: 31014
---
###################################
# sidecar-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecarapi
  labels:
    app: sidecarapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidecarapi

  template:
    metadata:
      labels:
        app: sidecarapi
    spec:
      containers:
        - name: sidecarapi
          image: us-central1-docker.pkg.dev/gcloudprojectg14e2/entrega2-g14/sidecarapi:2.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3005
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-sidecarapi
  annotations:
    cloud.google.com/backend-config: '{"default": "sidecarapi-config"}'
spec:
  type: NodePort
  selector:
    app: sidecarapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
      nodePort: 31015
---
