yml_files_e2/k8s-ingress-deployment.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /users/*
        backend:
          service:
            name: servicio-users
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /posts/*
        backend:
          service:
            name: servicio-posts
            port: 
              number: 80
      - pathType: Prefix
        path: /posts
        backend:
          service:
            name: servicio-posts
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /routes/*
        backend:
          service:
            name: servicio-routes
            port: 
              number: 80
      - pathType: Prefix
        path: /routes
        backend:
          service:
            name: servicio-routes
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /offers/*
        backend:
          service:
            name: servicio-offers
            port: 
              number: 80
      - pathType: Prefix
        path: /offers
        backend:
          service:
            name: servicio-offers
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /public/*
        backend:
          service:
            name: servicio-sidecarapi
            port: 
              number: 80
      - pathType: Prefix
        path: /ping
        backend:
          service:
            name: servicio-sidecarapi
            port: 
              number: 80
